Made the website mobile-friendly! And fixed some other small UI issues. Text and navbar now look good on mobile and in small browser windows.

--- a/j-entry-page/j-entry-page.css
+++ b/j-entry-page/j-entry-page.css
@@ -11,7 +11,6 @@ body {
 }
 
 .title-div {
-	width: 100%;
 	text-align: center;
 }
 
@@ -71,23 +70,14 @@ body {
 	margin-bottom: 15px;
 }
 
-#entry-description {
-	font-size: 18px;
-	text-align: justify;
-}
-
 @media screen and (min-width: 768px) {
 	#photo-modal .modal-dialog  {
-		width:75%;
+		width:70%;
 	}
-}
 
-@media screen and (max-width: 767px) {
 	#entry-description {
-		font-size: 2em;
-	}
-	#photo-modal .modal-dialog  {
-		width:auto;
+		font-size: 18px;
+		text-align: justify;
 	}
 }
 
